[package]
name = "dyn-dictionary"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/PFAhard/dyn_dict"
description = "Rust dict for store value of any type in one map"
categories = ["dictionary"]
keywords = ["dictionary"]
license = "GPL-3.0"
documentation = "https://docs.rs/dyn-dictionary"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
